# pre-commit-branch-name-validation

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
pre_commit_branch_validation/: hook.py
tests/: test_hook.py
