[tool.poetry]
name = "pre_commit_branch_validation"
version = "1.0.0"
description = "A pre-commit hook that validates branch names."
classifiers = ["Programming Language :: Python :: 3 :: Only"]
keywords = ["git", "pre-commit", "branch-names", "git-hooks"]
authors = ["Igor Hrček <igor@mailerlite.com>"]
readme = "README.md"

[project.urls]
code = "https://github.com/mailergroup/pre-commit-branch-validation"
tracker = "https://github.com/mailergroup/pre-commit-branch-validation/issues"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.25.0"
pre-commit = "^2.12.1"
setuptools = "^67.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
pre-commit-branch-validation = "pre_commit_branch_validation.hook:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "*.egg-info",
    ".git",
    ".pytest_cache",
    ".vscode",
]
